--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,35 @@
-*.annot
-*.cmo
-*.cma
-*.cmi
-*.a
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
 *.o
-*.cmx
-*.cmxs
-*.cmxa
+*.obj
 
-# ocamlbuild working directory
-_build/
+# Precompiled Headers
+*.gch
+*.pch
 
-# ocamlbuild targets
-*.byte
-*.native
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
 
-# oasis generated files
-setup.data
-setup.log
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+build
+build/*
