--- a/otterc/CMakeLists.txt
+++ b/otterc/CMakeLists.txt
@@ -8,13 +8,12 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O2")
 set(LLVM_CONFIG_PATH "/usr/bin/llvm-config")
 
 find_package(LLVM 4.0 REQUIRED ${EXTRA_LLVM_MODULES} CONFIG)
-INCLUDE_DIRECTORIES(${LLVM_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(./inc ${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
 
 find_package(Boost 1.6 COMPONENTS program_options REQUIRED)
 
 
-INCLUDE_DIRECTORIES(./inc)
 add_executable(otterc
 	./lib/context/context.cpp
 	./lib/semantics/preCheck.cpp
@@ -22,6 +21,7 @@ add_executable(otterc
 	./lib/codegen/context.cpp
 	./lib/driver/driver.cpp
 	otterc.cpp)
-llvm_map_components_to_libnames(llvm_libs bitwriter passes objcarcopts x86asmparser x86codegen)
+llvm_map_components_to_libnames(llvm_libs bitwriter passes objcarcopts
+x86asmparser x86codegen AArch64asmparser AArch64codegen)
 target_link_libraries(otterc stdc++fs ${llvm_libs})
 
