--- a/otterc/CMakeLists.txt
+++ b/otterc/CMakeLists.txt
@@ -6,12 +6,28 @@ set(CMAKE_CXX_FLAGS_DEBUG "-g -Wall")
 set(CMAKE_CXX_FLAGS_RELEASE "-O2")
 
 set(LLVM_CONFIG_PATH "/usr/bin/llvm-config")
-execute_process(COMMAND ${LLVM_CONFIG_PATH} --includedir
-	OUTPUT_VARIABL LLVM_INCLUDE_DIRS OUTPUT_STRIP_TRAILING_WHITESPACE)
+
+execute_process(
+  COMMAND
+    ${LLVM_CONFIG_PATH} --includedir
+  OUTPUT_VARIABLE
+    LLVM_INCLUDE_DIRS
+  OUTPUT_STRIP_TRAILING_WHITESPACE
+  )
+
+  execute_process(
+  COMMAND
+    ${LLVM_CONFIG_PATH} --libdir
+  OUTPUT_VARIABLE
+    LLVM_LIBRARY_DIRS
+  OUTPUT_STRIP_TRAILING_WHITESPACE
+  )
 
 find_package(LLVM 5.0 REQUIRED ${EXTRA_LLVM_MODULES} CONFIG)
 INCLUDE_DIRECTORIES(./inc ${LLVM_INCLUDE_DIRS})
 add_definitions(${LLVM_DEFINITIONS})
+link_directories( ${LLVM_LIBRARY_DIRS} )
+
 
 find_package(Boost 1.6 COMPONENTS program_options REQUIRED)
 
